src/assets/main.css
@import './base.css';

/* html tags */
section {
  margin: var(--section-gap) auto;
}

main {
  padding: 40px 40px 0;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 1rem;
}

h1 {
  font-size: 1.6rem;
  text-align: center;
}

h2 {
  font-size: 1.4rem;
}

h3 {
  font-weight: bold;
  text-align: center;
}

p {
  margin-bottom: 1rem;
}

a {
  text-decoration: none;
  color: var(--accent-3);
  filter: brightness(75%);
}

a:visited {
  filter: brightness(50%);
}

a:hover {
  filter: brightness(100%);
}

a:focus, a:active {
  filter: brightness(120%);
}

ul {
  padding-left: 1rem;
  list-style-position: outside;
}

hr {
  border: none;
  border-bottom: 6px dotted var(--dark-1);
  width: 36px;
  margin: 1.6rem auto;
}

/* flex */
.flex-container {
  display: flex;
  justify-content: center;
}

.flex-gap {
  gap: 2rem;
}

.flex-container-row {
  flex-direction: row !important;
}

.flex-container-column {
  flex-direction: column;
  align-items: flex-start;
}

.flex-item {
  flex: 1 1 auto;
  padding: 1rem;
}

.flex-basis-50 {
  flex-basis: 50%;
}

/* grid */
.grid-container {
  display: grid;
}

.grid-row {
  padding: 1rem;
}

.grid-row.grid-container{
  grid-template-columns: 1fr 3fr;
  padding: 0;
}

.grid-gap {
  grid-gap: 0.4rem;
}

/* buttons */
.btn {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.5rem 2rem;
  border: 2px solid var(--black-mute);
  border-radius: 3px;
  font-size: x-large;
  font-weight: bold;
  filter: brightness(100%);
  margin: 1rem auto;
}

.btn-primary {
  background-color: var(--dark-1);
  color: var(--accent-1);
}

.btn-primary:hover {
  background-color: var(--accent-1);
  color: var(--dark-1);
  filter: brightness(100%);
}
/* 
.btn-primary.disabled, .btn-primary.disabled :hover{
  background-color: var(--accent-1-disabled);
  color: var(--color-text-alt);
  filter: brightness(80%);
} */

/* common classes */
.hidden {
  display: none;
}

.margin-0 {
  margin: 0;
  padding: 0
}

.center-text {
  text-align: center;
}

/* mobile */

@media screen and (max-width: 650px) {
  h2 {
    font-size: 1.2rem;
  }

  main {
    padding: 40px 1rem 0;
  }

  section {
    margin-top: 2rem;
  }

  .flex-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .flex-item {
    padding: 0;
  }

  .dropdown-menu {
    position: relative;
    border: none;
  }
}

